Made status icon on addmeal page smaller on mobile

--- a/client/addmeal/addmeal.less
+++ b/client/addmeal/addmeal.less
@@ -32,15 +32,15 @@ body.addmeal, body.editmeal {
       color: black;
       left: 5%;
       width: 90%;
-      height: 40%;
+      height: 30%;
       display: block;
     }
     .icon-chef {
-      top: 5%;
+      top: 10%;
     }
     .icon-knife-fork {
-      top: 55%;
-      bottom: 5%;
+      top: 60%;
+      bottom: 10%;
     }
     .eater-status {
       transition: top 0.25s, bottom 0.25s;
@@ -91,6 +91,16 @@ body.addmeal, body.editmeal {
     /* SM */
     .card {
       width: calc(~"33% - 8px");
+      .icon {
+        height: 40%;
+      }
+      .icon-chef {
+        top: 5%;
+      }
+      .icon-knife-fork {
+        top: 55%;
+        bottom: 5%;
+      }
     }
   }
 
