--- a/client/eater/eater.less
+++ b/client/eater/eater.less
@@ -1,13 +1,52 @@
 body.eater {
-  h1 {
+  font-size: 12px;
+  #content {
+    text-align: right;
+  }
+  .card {
+    width: 50%;
+    float: left;
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.12), 0px 2px 2px 0px rgba(0,0,0,0.24);
+    border-radius: 2px;
+    .name {
+      letter-spacing: 0.5px;
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      color: white;
+      font-size: 18px;
+      text-shadow: 0 0 2px rgba(0,0,0,0.9);
+    }
+    img {
+      width: 100%;
+    }
+  }
+  .stats, .eater-buttons {
+    vertical-align: top;
     display: inline-block;
     width: 50%;
+    padding-left: 8px;
   }
-  .ratio {
-    margin: 0;
+  .eater-buttons {
+    margin-top: 24px;
+    a {
+      display: block;
+    }
   }
-  .eater-pic {
-    float: right;
-    width: 50%;
+  @media (min-width: 768px) {
+    .card {
+      width: 33%;
+    }
+    .stats {
+      font-size: 14px;
+      width: 33%;
+      text-align: left;
+    }
+    .eater-buttons {
+      width: 33%;
+      margin-top: 0;
+    }
   }
 }
