--- a/client/eater/eater.less
+++ b/client/eater/eater.less
@@ -6,6 +6,7 @@ body.eater {
     overflow: hidden;
     box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.12), 0px 2px 2px 0px rgba(0,0,0,0.24);
     border-radius: 2px;
+    font-size: 0;
     .name {
       letter-spacing: 0.5px;
       position: absolute;
