--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -98,6 +98,13 @@ body > header {
   top: 0;
   min-height: 30px;
   box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.12), 0px 4px 4px 0px rgba(0,0,0,0.24);
+  h1 {
+    position: absolute;
+    left: 50%;
+    top: 15px;
+    transform: translate(-50%, 0);
+    margin: 0;
+  }
   .logo {
     display: inline-block;
     width: auto;
@@ -170,6 +177,13 @@ body > header {
   }
   #header {
     height: 56px;
+    h1 {
+      position: static;
+      display: inline-block;
+      vertical-align: top;
+      transform: translate(0, 0);
+      margin: 4px 0 0 5px;
+    }
     .menu-toggle {
       display: none;
     }
