--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -65,6 +65,7 @@ input.form-control[type=text], input.form-control[type=number], input.form-contr
   margin: 5px 0;
   border-radius: 0;
   padding: 4px 6px;
+  color: black;
 }
 .uploadcare-widget {
   margin: 5px 0;
