--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -102,9 +102,14 @@ body > header {
   h1 {
     position: absolute;
     left: 50%;
-    top: 15px;
+    top: 14px;
     transform: translate(-50%, 0);
     margin: 0;
+    font-family:"Gill Sans", "Courier Prime", sans-serif;
+    font-size: 24px;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 2px;
   }
   .logo {
     display: inline-block;
@@ -125,6 +130,9 @@ body > header {
     }
   }
  nav {
+    font-family:"Gill Sans", "Courier Prime", sans-serif;
+    font-weight: 300;
+    letter-spacing: 1px;
     max-height: 0;
     margin-top: 0;
     padding: 0;
@@ -141,10 +149,7 @@ body > header {
       text-decoration: none;
       font-size: 24px;
       position: relative;
-      font-weight: 700;
-      span {
-        font-weight: 700;
-      }
+      text-transform: uppercase;
       &:last-of-type {
         margin-bottom: 0;
       }
@@ -205,7 +210,7 @@ body > header {
         padding: 0;
         text-decoration: none;
         font-size: 18px;
-        margin: 10px;
+        margin: 10px 20px;
         &:last-of-type {
           margin: 10px;
         }
