Photos as background images, and fancy backgrounds
Makes the photos background images.
Relying on an image tag to fill out the width and height of the div caused "jumpy" page reflows while they load.

--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -85,7 +85,10 @@ button[type=submit] {
 }
 
 body {
-  background-color: #303030;
+  // background-color: #303030;
+  // background-image: linear-gradient(-180deg, #303030 0%, #565555 100%);
+  background: ghostwhite url('/img/tablecloth.png');
+  background: ghostwhite url('/img/pinboard.png');
   color: #FFF;
   padding-top: 56px;
   font-family: "Courier Prime", monospace;
