--- a/client/eater/eater.less
+++ b/client/eater/eater.less
@@ -7,6 +7,11 @@ body.eater {
     box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.12), 0px 2px 2px 0px rgba(0,0,0,0.24);
     border-radius: 2px;
     font-size: 0;
+    background: ghostwhite url("/img/tablecloth.png");
+    .photo {
+      padding-top:100%;
+      background-size: cover;
+    }
     .name {
       letter-spacing: 0.5px;
       position: absolute;
@@ -20,13 +25,25 @@ body.eater {
       width: 100%;
     }
   }
+  .stats {
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.8)
+  }
   .stats, .eater-buttons {
-    font-size: 12px;
-    text-align: right;
+    font-size: 14px;
+    text-align: left;
     vertical-align: top;
     display: inline-block;
     width: 50%;
     padding-left: 8px;
+  }
+  .last-cooked,
+  .last-ate {
+    font-size: 0.8em;
+    text-align: center;
+  }
+  .flourish {
+    text-align: center;
+    padding-top:10px;
   }
   .eater-buttons {
     margin-top: 24px;
@@ -44,12 +61,13 @@ body.eater {
       width: 33%;
     }
     .stats {
-      font-size: 14px;
-      width: 33%;
+      font-size: 20px;
+      width: 33.33%;
       text-align: left;
+      margin-left: 15px;
     }
     .eater-buttons {
-      width: 33%;
+      width: 33.33%;
       margin-top: 0;
     }
   }
