--- a/client/home/home.less
+++ b/client/home/home.less
@@ -13,6 +13,11 @@ body.home {
     overflow: hidden;
     box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.12), 0px 2px 2px 0px rgba(0,0,0,0.24);
     border-radius: 2px;
+    background: ghostwhite url('/img/tablecloth.png');
+    .photo {
+      padding-top:100%;
+      background-size: cover;
+    }
     .name {
       letter-spacing: 0.5px;
       position: absolute;
@@ -21,9 +26,6 @@ body.home {
       color: white;
       font-size: 18px;
       text-shadow: 0 0 2px rgba(0,0,0,0.9);
-    }
-    img {
-      width: 100%;
     }
     .score {
       position: absolute;
@@ -79,12 +81,16 @@ body.home {
   .rye .card {
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
+    width: calc(~"33.33% - 8px");
   }
 
   @media (min-width: 768px) {
     /* SM */
     .card {
-      width: calc(~"33% - 8px");
+      width: calc(~"33.33% - 8px");
+    }
+    .rye .card {
+      width: calc(~"25% - 8px");
     }
   }
 
@@ -92,6 +98,9 @@ body.home {
     /* MD */
     .card {
       width: calc(~"25% - 8px");
+    }
+    .rye .card {
+      width: calc(~"20% - 8px");
     }
   }
 }
