twitter auth works

--- a/routes/join/join.jade
+++ b/routes/join/join.jade
@@ -11,8 +11,6 @@ include ../icon
     p.h3 Fill in your details to create your account.
     label Name
     input(type="text", name="name").block.col-12.mb2.field.monospace
-    label Email
+    label Email address
     input(type="text", name="email").block.col-12.mb2.field.monospace
-    label Password
-    input(type="text", name="password").block.col-12.mb2.field.monospace
     button(type="submit").btn.btn-primary Create account
